AArch64: Crash in C1-compiled code accessing References

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b150
    • aarch64

        In the entry of TemplateInterpreterGenerator::generate_Reference_get_entry the sender's SP is saved in r13, a call-clobbered register. We need to save it in a register which is not call-clobbered when we call g1_write_barrier_pre().

              Assignee:
              Andrew Haley
              Reporter:
              Andrew Haley
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: