8170100: AArch64: Crash in C1-compiled code accessing References

Reviewed-by: roland